--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Личный сайт студента GeekBrains</title>
+	<title>Личный сайт студента Нетологии</title>
 	<link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -15,7 +15,7 @@
 		<a href="generator.php">Генератор паролей</a>
 	</div>
 
-	<h1>Личный сайт студента GeekBrains</h1>
+	<h1>Личный сайт студента Нетологии</h1>
 
 	<div class="center">
 	<img src="img/photo.png">
